--- a/composer.json
+++ b/composer.json
@@ -31,12 +31,6 @@
   "require": {
     "voryx/event-loop": "^0.2.0",
     "react/stream": "^0.4.3",
-    "asm89/rx.php": "dev-master"
-  },
-  "repositories": [
-    {
-      "type": "git",
-      "url": "https://github.com/voryx/Rx.PHP.git"
-    }
-  ]
+    "reactivex/rxphp": "^1.0.0"
+  }
 }
