--- a/composer.json
+++ b/composer.json
@@ -28,11 +28,19 @@
       "Rx\\React\\": "src/"
     }
   },
+  "autoload-dev": {
+    "psr-4": {
+      "Rx\\React\\Tests\\": "tests/"
+    }
+  },
   "require": {
     "php": "^7.0",
     "voryx/event-loop": "^2.0",
     "react/stream": "^0.4.3",
     "reactivex/rxphp": "^2.0",
     "rx/operator-extras": "^2.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^5.7"
   }
 }
