Forward compatibility with voryx/event-loop 3.0 and while supporting 2.0

--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
   },
   "require": {
     "php": "^7.0",
-    "voryx/event-loop": "^2.0",
+    "voryx/event-loop": "^3.0 || ^2.0",
     "react/stream": "^0.7.0",
     "reactivex/rxphp": "^2.0",
     "rx/operator-extras": "^2.0"
